# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Zikr App API",
     "version": "1.0.0"
   },
-  "host": "zikr-backend.onrender.com",
+  "host": "https://zikr-backend.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -152,130 +152,6 @@
         }
       }
     },
-    "/api/users/totalUnseens/{type}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/all/{type}/{id}/{search?}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "search?",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/other/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/users/forget-password": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "phone": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
     "/api/users/update-password": {
       "put": {
         "description": "",
@@ -366,7 +242,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "phone": {
+                "email": {
                   "example": "any"
                 }
               }
@@ -422,7 +298,7 @@
         "parameters": [
           {
             "name": "type",
-            "in": "trainer/student",
+            "in": "path",
             "required": true,
             "type": "string"
           },
@@ -770,33 +646,6 @@
         }
       }
     },
-    "/api/users/check-phone": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "phone": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
     "/api/users/update-user": {
       "put": {
         "description": "",
@@ -812,46 +661,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "fname": {
-                  "example": "any"
-                },
-                "lname": {
+                "name": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "phone": {
+                "password": {
                   "example": "any"
                 },
                 "image": {
                   "example": "any"
                 },
-                "selfiId": {
-                  "example": "any"
-                },
-                "idFront": {
-                  "example": "any"
-                },
-                "idBack": {
-                  "example": "any"
-                },
-                "profession": {
-                  "example": "any"
-                },
-                "profession_detail": {
-                  "example": "any"
-                },
                 "location": {
                   "example": "any"
                 },
-                "age": {
-                  "example": "any"
-                },
-                "type": {
-                  "example": "any"
-                },
-                "noti": {
+                "fcmtoken": {
                   "example": "any"
                 }
               }
@@ -911,167 +736,6 @@
           },
           "404": {
             "description": "Not Found"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/add-bank": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "acc_title": {
-                  "example": "any"
-                },
-                "bank_name": {
-                  "example": "any"
-                },
-                "number": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/update-bank/{id}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "acc_title": {
-                  "example": "any"
-                },
-                "bank_name": {
-                  "example": "any"
-                },
-                "number": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/bank/{id}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "440": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/users/bank-details": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "440": {
             "description": ""
@@ -1190,37 +854,15 @@
         }
       }
     },
-    "/api/users/payment-intent": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "amount": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/api/msg/send": {
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1265,6 +907,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1301,6 +948,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1330,6 +982,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -1370,6 +1027,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1402,6 +1064,11 @@
             "name": "userId",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -1439,6 +1106,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1468,6 +1140,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -1505,6 +1182,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1541,6 +1223,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1565,6 +1252,13 @@
     "/api/notification/check-seen": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1587,6 +1281,13 @@
     "/api/notification/seen": {
       "put": {
         "description": "",
+        "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1614,6 +1315,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -1648,6 +1354,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1678,6 +1389,13 @@
     "/api/wallet/balance": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1698,6 +1416,11 @@
       "put": {
         "description": "",
         "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1731,6 +1454,11 @@
       "put": {
         "description": "",
         "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1778,6 +1506,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1804,6 +1537,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
             "type": "string"
           },
           {
@@ -1859,6 +1597,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1887,6 +1630,11 @@
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1949,6 +1697,11 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1963,6 +1716,88 @@
           },
           "440": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/api/session/tutor/{status}/{date?}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "date?",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "440": {
+            "description": ""
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/session/student/{status}/{date?}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "date?",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "440": {
+            "description": ""
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
